--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: "Feel free to contact me on Telegram: t.me/ke3rnel."
 # All of these are optional and can be removed or commented out
 email: "alireza.hoss3in1@gmail.com"
 #twitter_username: "twitteruser"
-github_username: "https://github.com/binary-win"
-linkedin_username: "https://www.linkedin.com/in/alireza-hosseini-ab53a7282"
+github_username: "binary-win"
+linkedin_username: "alireza-hosseini-ab53a7282"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
