--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "My Research & Blog"
-author: "Ke3rNel"
+author: "Alireza Hosseini"
 description: "Feel free to contact me on Telegram: t.me/ke3rnel."
 # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
